frontend-173: * small horizontal scroll arrow animation fix

--- a/frontend/src/components/common/vertical-scroll/style.module.scss
+++ b/frontend/src/components/common/vertical-scroll/style.module.scss
@@ -67,7 +67,8 @@
   }
 
   &:active {
-    padding: 10px;
+    max-height: 31px;
+    padding: 7px;
     background-color: var(--gray-200-input-background);
     border-radius: 100%;
   }
